--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "axios": "^1.6.7",
     "expo": "~49.0.15",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
-    "expo-secure-store": "~12.3.1",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "expo-document-picker": "~11.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
