--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "expo-notifications": "~0.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
