--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "axios": "^1.6.7",
     "expo": "~49.0.15",
     "expo-document-picker": "~11.5.4",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-location": "~16.1.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
