--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "expo-document-picker": "~11.5.4",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.24.12",
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-webview": "13.2.2",
-    "expo-notifications": "~0.20.1"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
