--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "axios": "^1.6.7",
-    "expo": "~49.0.15",
-    "expo-document-picker": "~11.5.4",
+    "expo": "^51.0.0",
+    "expo-document-picker": "~12.0.1",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-location": "~16.1.0",
-    "expo-notifications": "~0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "^0.24.12",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.1",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.11",
     "firebase": "^10.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-maps": "1.7.1",
+    "react-native": "0.74.1",
+    "react-native-maps": "1.14.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
