--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.14",
     "axios": "^1.6.7",
     "expo": "^51.0.0",
+    "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.1",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-location": "~17.0.1",
@@ -24,6 +25,7 @@
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.14.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.8.6"
