--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.raytron2000.ucrpathfinderoctober2024-v2"
     },
     "android": {
       "adaptiveIcon": {
