--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,9 +109,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.raytron2000.ucrpathfinderoctober2024'
+    namespace 'com.raytron.ucrpathfinderoctober2024'
     defaultConfig {
-        applicationId 'com.raytron2000.ucrpathfinderoctober2024'
+        applicationId 'com.raytron.ucrpathfinderoctober2024'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -199,3 +199,5 @@ if (rnVersion < versionToNumber(0, 75, 0)) {
     apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
     applyNativeModulesAppBuildGradle(project)
 }
+
+apply plugin: 'com.google.gms.google-services'
