--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-firebase/app": "^21.0.0",
-    "@react-native-firebase/auth": "^21.0.0",
+    "@react-native-firebase/app": "17.4.0",
+    "@react-native-firebase/auth": "17.4.0",
+    "@react-native-firebase/firestore": "17.4.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "expo": "^51.0.37",
+    "expo-build-properties": "~0.5.1",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-location": "~17.0.1",
+    "expo-modules-autolinking": "~1.1.0",
     "expo-notifications": "~0.28.18",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -28,6 +32,8 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-maps": "^1.14.0",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.8.6"
   },
